<resources>
    <string name="app_name">ThumperDriver</string>
    <string name="ManualDriveBtnTxt">Manual Drive</string>
    <string name="AutoDriveBtnTxt">Automatic Drive</string>
    <string name="AboutBtnTxt">About</string>
    <string name="WelcomeTxt">Welcome to the Thumper control app. Start your driving experience right now by selecting your preferred driving mode below.</string>
    <string name="AutoDriveTitle">Automatic Drive</string>
    <string name="ManualDriveTitle">Manual Drive</string>
    <string name="AboutManualDrive">Press buttons, move Thumper. It\'s not rocket science...</string>
    <string name="AboutAutoDrivetxt">Press start, Thumper drives. Technology... Amazing!</string>
    <string name="AutoDriveLabel">Automatic Drive</string>
    <string name="ManualDriveLabel">Manual Drive</string>
    <string name="AboutTitle">About the app</string>
    <string name="NeoPxlBtn">NeoPixel</string>
    <string name="NeoPxlStringInfo">Get NeoPixel string information</string>
    <string name="NeoPxlColor">Set NeoPixel color: sliders control color intensity and delay between flashes.</string>
    <string name="NeoPxlRVal">RED</string>
    <string name="NeoPxlGreen" />
    <string name="NeoPxlGreenVal">GREEN</string>
    <string name="NeoPxlBlueVal">BLUE</string>
    <string name="NeoPxlPostBtn">POST</string>
    <string name="NeoPxlGetBtn">GET</string>
    <string name="PxlNumber">Number of Pixels:</string>
    <string name="StringIDValue" />
    <string name="action_settings" >Settings</string>
    <string name="StringID">String ID:</string>
    <string name="action_about">About</string>
    <string name="action_neopixel">NeoPixel</string>
    <string name="PxlNumberVal" />
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_server_ip">Server IP</string>
    <string name="pref_default_server_ip">192.168.1.100</string>
    <string name="pref_title_server_port">Server port</string>
    <string name="pref_default_server_port">3000</string>
    <string name="pref_title_neopxl_string_id">NeoPixel String Id</string>
    <string name="pref_default_neopxl_string_id">0</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="NeoPxlDelayValue">10</string>
    <string name="RedSBLabelTxt">RED</string>
    <string name="GreenSBLabelTxt">GREEN</string>
    <string name="BlueSBLabelTxt">BLUE</string>
    <string name="DelaySBLabelTxt">DELAY</string>
</resources>
