<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#245c73">

    //app:popupTheme="@style/AppTheme.PopupOverlay"


    <TextView android:text="@string/WelcomeTxt" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWelcome"
        android:textColor="#d3d9c7"
        android:textSize="20sp"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/ManualDriveBtnTxt"
        android:id="@+id/btnManual"
        android:onClick="onManualDriveClick"
        android:textColor="#d3d9c7"
        android:background="#245c73"
        android:scaleType="fitCenter"
        android:src="@drawable/manualdrive"
        android:layout_below="@+id/lblAutoDrive"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btnAutomatic"
        android:text="@string/AutoDriveBtnTxt"
        android:onClick="onAutomaticDriveClick"
        android:src="@drawable/autodrive"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/AutoDriveLabel"
        android:id="@+id/lblAutoDrive"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#d3d9c7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ManualDriveLabel"
        android:id="@+id/textView3"
        android:textColor="#d3d9c7"
        android:textSize="20sp"
        android:layout_below="@+id/btnManual"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
